--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "reactflow": "^11.11.4",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
   },
